# historico

./: ANUNCIO.TXT_  MONOBRASILPROJECT.RTF  NOVAPROPOSTA_LOGO.XCF  ResumoEventos.docx
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/: BUGS  CREDITOS  ProjetoPilotoSoberano.kateproject  README  configure.ac
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/LifeLets.Console/: ContactsConsole.cs  LifeLets.Console.pidb  Main.cs  MenuOption.cs  Navigator.cs
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/LifeLets.Core/: File.cs  LifeLets.Core.mdp  LifeLets.Core.pidb  LifeLets.Core.prjx  Makefile.am  NameService.cs  Network.cs  NetworkBridge.cs  NetworkServer.cs  PeerNetwork.cs  Photo.cs
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/LifeLets.Gui/: LLChangeName.cs  LLChatWindow.cs  LLCreditsWindow.cs  LLTrustWindow.cs  LifeLetsGTK.pidb  MainLLGTK.cs  MyNickname.cs  SovereChat.cs
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/LifeLets.Gui/GUI/CreditsWindow/: creditswindow.glade
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/LifeLets.Gui/GUI/MainWindow/: LiveLetsMainWindow.prjx  Main.cs  Makefile.LiveLetsMainWindow  Makefile.solution.LiveLetsMainWindow  gui.glade  make.sh
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/LifeLets.Gui/GUI/SovereChatWindow/: Main.cs  Makefile.solution.SovereChat  SovereChat.pidb  make.sh  soverechatwindow.glade
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/LifeLets.Gui/resources/: LLChangeName.glade  LLChatWindow.glade  LLNavigation.glade  gui.glade  llTrustWindow.glade  llgetcontactfiles.glade  llviewpicturewindow.glade
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/Test/: Makefile.am  Test.LifeLets.Core.pidb  Test.LifeLets.Core.prjx  TestLife.cs
Apresentacoes/2012/exemplos/LifeLets/ProjetoPilotoSoberano/doc/EN-US/: SovereignComputing.txt
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  intltool-extract.in  intltool-merge.in  intltool-update.in  libtool  mcatalog.applications  mcatalog.desktop  mcatalog.desktop.in  mcatalog.schemas  mcatalog.schemas.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/images/: Makefile.am  Makefile.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/images/default/: Makefile.am  Makefile.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/images/grass/: Makefile.am  Makefile.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/images/leather/: Makefile.am  Makefile.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/images/metal/: Makefile.am  Makefile.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/images/wood/: Makefile.am  Makefile.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/po/: ChangeLog  POTFILES.in  cs.po  de.po  en_CA.po  en_GB.po  es.po  fr.po  hu.po  it.po  nl.po  pt_BR.po  rw.po  sv.po  zh_CN.po
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/resources/: Database.sql  Makefile.am  Makefile.in  dialogaddalbum.glade  dialogaddbook.glade  dialogaddfilm.glade  dialogexport.glade  mainwindow.glade  template_items_albums.html  template_items_books.html  template_items_films.html  themeselection.glade  title.glade
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/resources/dbupdates/: 0.0.5.sql  0.0.7.sql
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/src/: AssemblyInfo.cs  Borrower.cs  BorrowerList.cs  Catalog.cs  CatalogList.cs  Conf.cs  Database.cs  Defines.cs.in  Exporter.cs  ImageSize.cs  Item.cs  ItemCollection.cs  ItemList.cs  ItemShelf.cs  Main.cs  Makefile.am  Makefile.in  Order.cs  Presentation.cs  RatingWidget.cs  TitleWidget.cs  View.cs  mcatalog.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/src/dialogs/: AddAlbumDialog.cs  AddBookDialog.cs  AddDialog.cs  AddFilmDialog.cs  CatalogPropertiesDialog.cs  ExportDialog.cs  LendItemDialog.cs  PreferencesDialog.cs  ProgressDialog.cs  SelectDialog.cs
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/mcatalog-0.2/templates/: Makefile.am  Makefile.in  albums_printable.html  albums_printable.rc  albums_simple.html  albums_simple.rc  books_printable.html  books_printable.rc  books_simple.html  books_simple.rc  films_printable.html  films_printable.rc  films_simple.html  films_simple.rc
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/monouml-0.1/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  configure  configure.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/monouml-0.1/m4/: Makefile.in
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/monouml-0.1/po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  es.gmo  es.po  monouml.pot  pt_BR.gmo  pt_BR.po
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/monouml-0.1/src/: MainWindow.cs  Makefile.am  Makefile.in  README
Apresentacoes/2012/exemplos/LiveCD0.2/Aplicativos/monouml-0.1/src/DI/: AssemblyInfo.cs  (+26 more)
Apresentacoes/2012/exemplos/LiveCD0.2/GTK#/ProjetoPilotoSoberano/: AUTHORS  ChangeLog  INSTALL  LifeLets.mds  Makefile.am  TODO  autogen.sh
Apresentacoes/2012/exemplos/LiveCD0.2/GTK#/ProjetoPilotoSoberano/LifeLets.Console/: Console.cs  ConsoleNovo.cs  ConsoleOptions.cs  LifeLets.Console.mdp  LifeLets.Console.pidb  LifeLets.Console.prjx  Makefile.am  SovereChat.cs
Apresentacoes/2012/exemplos/LiveCD0.2/GTK#/ProjetoPilotoSoberano/LifeLets.Core/: Contact.cs  Life.cs  LifeLets.Core.pidb
Apresentacoes/2012/exemplos/LiveCD0.2/GTK#/ProjetoPilotoSoberano/LifeLets.Gui/: LLAddContactWindow.cs  LLMainWindow.cs  LLNavigateWindow.cs  LLViewPictureWindow.cs  LifeLetsGTK.mdp  LifeLetsGTK.pidb  LifeLetsGTK.prjx  Main.cs  Makefile.am
Apresentacoes/2012/exemplos/LiveCD0.2/GTK#/ProjetoPilotoSoberano/Test/: Test.LifeLets.Core.mdp
Apresentacoes/2012/exemplos/LiveCD0.2/GTK#/ProjetoPilotoSoberano/doc/: ComputacaoSoberana.txt
(+560 files in other folders)
