SUBDIRS = default grass leather metal wood

pixmapdir = $(datadir)/mcatalog/pixmaps
pixmap_DATA = logo.png\
              mcatalog.png \
              shelfbgnp.png \
              shelfbg.png \
              littlestar.png \
              bigstar.png \
              borrowed.png

EXTRA_DIST = $(pixmap_DATA)
