noinst_DATA =                           \
	themeselection.glade		\
	dialogaddbook.glade 		\
	dialogaddfilm.glade 		\
	dialogaddalbum.glade		\
	dialogaddalbum.glade		\
	dialogexport.glade		\
	title.glade			\
	films.png			\
	mainwindow.glade 		\
	template_items_books.html 	\
	template_items_films.html 	\
	template_items_albums.html 	\
	bigstar.png 			\
	list.png 			\
	albums.png 			\
	shelf.png 			\
	books.png 			\
	Database.sql 			\
	empty.png 			\
	littlestar.png 			\
	dbupdates/0.0.5.sql		\
	dbupdates/0.0.7.sql

EXTRA_DIST = $(noinst_DATA) 

