templatesdir = $(datadir)/mcatalog/templates
templates_DATA = films_simple.html \
                 films_simple.rc \
                 films_simple.png \
                 books_simple.html \
                 books_simple.rc \
                 books_simple.png \
                 albums_simple.html \
                 albums_simple.rc \ 
                 albums_simple.png \
                 films_printable.html \
                 films_printable.rc \
                 films_printable.png \
                 books_printable.html \
                 books_printable.rc \
                 books_printable.png \
                 albums_printable.html \
                 albums_printable.rc \ 
                 albums_printable.png 


EXTRA_DIST = $(templates_DATA)
